--- a/package.json
+++ b/package.json
@@ -21,14 +21,18 @@
   },
   "dependencies": {
     "@nestjs/common": "^6.7.2",
+    "@nestjs/config": "^0.0.7",
     "@nestjs/core": "^6.7.2",
     "@nestjs/jwt": "^6.1.1",
     "@nestjs/mongoose": "^6.1.2",
     "@nestjs/passport": "^6.1.1",
     "@nestjs/platform-express": "^6.7.2",
+    "@nestjs/swagger": "^4.0.9",
     "bcrypt": "^3.0.7",
-    "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.2.3",
     "class-validator": "^0.11.0",
+    "cryptr": "^6.0.1",
+    "date-fns": "^2.8.1",
     "dotenv": "^8.2.0",
     "express-rate-limit": "^5.0.0",
     "helmet": "^3.21.2",
@@ -38,8 +42,10 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
+    "request-ip": "^2.1.3",
     "rimraf": "^3.0.0",
-    "rxjs": "^6.5.3"
+    "rxjs": "^6.5.3",
+    "swagger-ui-express": "^4.1.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^6.9.0",
